# DocAutomation

./: .gitignore  8 Azure Components.docx  ArchUpdated.docx  ArchUpdatedv1.docx  Architecure and Cost.docx  Comparison between Azure AI and Google DOC AI.docx  Doc Extraction - Architecture and costs.pptx  Doc-Processing Updated (1).vsdx  Doc-Processing Updated.vsdx  DocAutomation_Architecture.vsdx  DocProc_Deployment_Status.xlsx  Identity Verification Process.docx  Medicaid_ExParte_AI_Thoughts.docx  Mule Soft Connection.docx  My_Initial_Thoughts_ExParte_AI_LinuxONE.docx  Non-Standard Software Request - SOP.docx  Presentation_paystub-v1.pptx  Setup_guide.docx  Venkata Narasa Reddy Boredy - Roles and Responsibilities.docx  chapter 7.docx  classifyv1.py  co-ordinates.py  code.docx  identity.py  normalization code  presentation-pay_stub.docx  pyproject.toml  ~$tup_guide.docx
src/: main.py
src/api/v1/: routes.py
src/models/: __init__.py  lucidchart.py
src/services/: dispatcher.py
src/services/classification/: google_docai.py
src/services/mapping/: bank_statement_mapper.py
src/services/processors/: bank_statement.py  pay_stub.py  streamlit.py
ui/: app.py
